--- a/front-end/src/app/cadastro/cadastro.component.css
+++ b/front-end/src/app/cadastro/cadastro.component.css
@@ -1,59 +1,113 @@
-/* CSS do formulário de cadastro */
-.cadastro-container{
-  max-width: 400px;
-  margin: 3% auto;
-  padding: 20px;
-  border: 1px solid #cfcfcf;
-  border-radius: 4px;
-  background-color: #f5f4f4;
-  box-shadow:2px 2px 2px 1px rgba(202, 202, 202, 0.2);
+@font-face {
+  font-family:  'Gotham';
+  src: url('src/app/fontes/Poppins-Regular.woff2') format('woff2'),
+    url('src/app/fontes/Poppins-Regular.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+  font-family: 'Gotham';
+  src: url('src/app/fontes/Gotham-black-webfont.woff2') format('woff2'),
+    url('src/app/fontes/Gotham-black-webfont.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
 }
-  
-   h2 {
-    font-size: 24px;
-    margin-bottom: 20px;
-    margin-left: 38%;
-  }
-  
-   label {
-    display: block;
-    margin-bottom: 10px;
-    font-weight: bold;
-  }
-  
-  input[type="text"],
-  input[type="password"],
-  input[type="email"] {
-    width: 100%;
-    padding: 10px;
-    border: 1px solid #eaeaea;
-    border-radius: 4px;
-    box-sizing: border-box;
-    margin-bottom: 10px;
-  }
-  input:hover{
-    border-color: #05acc9;
-    transition: 1s;
-  }
-  
- button {
-  background-color: #059fba;
-  color: white;
-  padding: 10px 20px;
+
+.cadastro-container {
+  width: 80%;
+  max-width: 525px; 
+  padding: 20px; 
   border: none;
+  border-radius: 8px;
+  font-family: 'Gotham';
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 30px;
+  z-index: 1;
+}
+
+.cadastro-container {
+    width: 80%; 
+    max-width: 525px; 
+    padding: 20px; 
+    border: none;
+    border-radius: 8px;
+    font-family: 'Popins';
+    font-weight: 500;
+    font-size: 15px;
+    line-height: 30px;
+    z-index: 1;
+    padding-left: 500px;
+    color: #545454;
+  
+}
+
+.cadastro-bg {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(to right, #4d7b52 0%, #4d7b52 15%, #52C55D 15%, #52C55D 18%, #FFFFFF 18%, #FFFFFF 100%);
+  background-size: cover;
+}
+
+.cadastro-bg::before {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0px; /* Ajuste a posição horizontal da imagem conforme necessário */
+  width: 400px; /* Largura desejada da imagem */
+  height: 400px; /* Altura desejada da imagem */
+  background-image: url('src/app/imagens/11698-removebg-preview.png');
+  background-size: cover;
+  z-index: 1;
+}
+h2 {
+  font-family: 'Gotham';
+  font-size: 30px;
+  font-weight: 700;
+  line-height: 48px;
+  letter-spacing: 0em;
+  text-align: left;
+  color: #215626;
+  text-transform: uppercase;
+
+
+}
+
+label {
+  display: block;
+  font-weight: bold;
+}
+
+input[type="text"],
+input[type="password"],
+input[type="email"] {
+  width: 100%;
+  padding: 10px;
+  border: 1px solid #eaeaea;
+  border-radius: 4px;
+  box-sizing: border-box;
+  margin-bottom: 10px;
+  background-color: #5454541e;
+}
+
+button {
+  background-color: #3D8D45;
+  color: rgb(255, 255, 255);
+  padding: 5px 87px;
+  border: 1px solid #3f3f3fde;
   border-radius: 4px;
   cursor: pointer;
- 
-    margin-left: 38%;
-  }
- button:hover {
-  background-color: #05acc9;
-  transition: 1s;
-  }
+  font-family: 'Gotham';
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 24px;
+  margin-left: 104px;
+  letter-spacing: 0em;
+  text-align: left;
+}
 
-  
-  .form-container .error-message {
-    color: red;
-    margin-bottom: 10px;
-  }
-  
+.form-container .error-message {
+  color: red;
+  margin-bottom: 10px;
+}
