--- a/front-end/src/app/cadastro/cadastro.component.html
+++ b/front-end/src/app/cadastro/cadastro.component.html
@@ -1,30 +1,52 @@
-<link rel="stylesheet" href="cadastro.component.css">
+<link rel="stylesheet" href="cadastro.component.css" />
+<div class="cadastro-bg">
+   <div class="cadastro-container">
+      <h2>Cadastre sua conta</h2>
+      <label for="photo">Foto</label>
+      <input [(ngModel)]="photo" type="text" id="photo" name="photo" />
+      <label for="username">Usuario</label>
+      <input
+        [(ngModel)]="username"
+        type="text"
+        id="username"
+        name="username"
+        required
+      />
+    
+      <label for="fullname">Nome</label>
+      <input
+        [(ngModel)]="fullname"
+        type="text"
+        id="fullname"
+        name="fullname"
+        required
+      />
+    
+      <label for="email">E-mail</label>
+      <input [(ngModel)]="email" type="email" id="email" name="email" required />
+    
+      <label for="password">Senha</label>
+      <input
+        [(ngModel)]="password"
+        type="password"
+        id="password"
+        name="password"
+        required
+      />
+    
+      <label for="confirmPassword">Confirme sua senha</label>
+      <input
+        [(ngModel)]="confirmPassword"
+        type="password"
+        id="confirmPassword"
+        name="confirmPassword"
+        required
+      />
+    
+      <button (click)="register()">Criar conta</button>
+    </div>
 
-<div class="cadastro-container">
-   <h2>Cadastro</h2>
-   <label for="username">Login:</label>
-   <input [(ngModel)]="username" type="text" id="username" name="username" required>
-   <br><br>
-
-   <label for="password">Senha:</label>
-   <input [(ngModel)]="password" type="password" id="password" name="password" required>
-   <br><br>
-
-   <label for="confirmPassword">Confirme sua senha:</label>
-   <input [(ngModel)]="confirmPassword" type="password" id="confirmPassword" name="confirmPassword" required>
-   <br><br>
-
-   <label for="fullname">Nome completo:</label>
-   <input [(ngModel)]="fullname" type="text" id="fullname" name="fullname" required>
-   <br><br>
-
-   <label for="photo">Foto:</label>
-   <input [(ngModel)]="photo" type="text" id="photo" name="photo">
-   <br><br>
-
-   <label for="email">E-mail:</label>
-   <input [(ngModel)]="email" type="email" id="email" name="email" required>
-   <br><br>
-
-   <button (click)="register()">Salvar</button> 
+    <div>
+      <span class="img-bola"></span>
+    </div>
 </div>
