--- a/front-end/src/app/login/login.component.css
+++ b/front-end/src/app/login/login.component.css
@@ -1,4 +1,16 @@
-/* Estilos para o componente de login */
+
+@font-face {
+  font-family: 'Poppins';
+  src: url('src/app/fontes/Poppins-Regular.woff2') format('woff2'), 
+       url('src/app/fontes/Poppins-Regular.woff') format('woff'); 
+  font-weight: normal;
+  font-style: normal;
+}
+
+body {
+  font-family: 'Poppins', sans-serif;
+}
+
 .login-container {
   position: relative;
   width: 525px;
@@ -9,7 +21,7 @@
   font-weight: 500;
   font-size: 20px;
   line-height: 30px;
-  z-index: 1; /* Certifique-se de que o conteúdo fique sobre a imagem de fundo */
+  z-index: 1;
 }
 
 .login-bg {
@@ -18,25 +30,31 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-image:linear-gradient(to right, #4d7b52, transparent), url('src/app/imagens/jogadores-de-futebol-em-acao-no-estadio-profissional.jpg');
+  background: linear-gradient(to right, #4d7b52 40%, #4d7b5205 80%, transparent 40%), url('src/app/imagens/jogadores-de-futebol-em-acao-no-estadio-profissional.jpg');
   background-size: cover;
   background-position: center;
 }
 
 
-/* Estilos para o botão de Entrar */
+
 button {
   background-color: #FAEA5E;
-  color: black; /* Cor do texto */
-  padding: 10px 20px;
-  border: none;
+  color: black;
+  padding: 5px 25px;
+  border: 1px solid #3f3f3fde;
   border-radius: 4px;
   cursor: pointer;
-  font-family: 'Poppins', sans-serif;
+  font-family: 'Poppins';
   font-weight: 500;
   font-size: 16px;
   line-height: 24px;
+  margin-left: 150px;
+  font-family: 'Poppins';
+  letter-spacing: 0em;
+  text-align: left;
+
 }
+
 .input-wrapper {
   margin-bottom: 20px;
 }
@@ -47,39 +65,50 @@ button {
 }
 
 .input-wrapper input {
-  width: calc(100% - 10px); /* Ajusta o tamanho do input de acordo com o padding */
+  width: calc(80% - 10px);
   padding: 5px;
   font-family: 'Poppins', sans-serif;
   font-weight: 500;
   font-size: 16px;
-  border: 1px solid #ccc;
-  border-radius: 4px;
+  border: 1px solid #ccccccd0;
+  border-radius: 10px;
   box-sizing: border-box;
+  background-color: #b9afaf1e;
+
 }
 
-label[for="username"], label[for="password"] {
+label[for="username"],
+label[for="password"] {
   position: static;
   top: 0;
   left: 0;
-  pointer-events: none; /* Permite que o cursor passe por cima do rótulo */
-  font-family: 'Poppins', sans-serif;
-  font-weight: 500;
+  pointer-events: none;
+  font-family: Poppins;
   font-size: 20px;
-  color:white;
+  font-weight: 500;
+  line-height: 30px;
+  letter-spacing: 0em;
+  text-align: left;
+  padding: 10px 2px 5px 10px;  
+  color: white;
 }
 
 
-h2{
-  font-family: Poppins;
+h2 {
+  font-family: 'Poppins';
   font-size: 36px;
   font-weight: 500;
   line-height: 54px;
   letter-spacing: 0em;
   text-align: left;
-  color:white;
+  color: white;
 }
 
-h3{
+h3 {
+  font-family: 'Poppins';
+  font-size: 16px;
+  padding-left: 35px;
+  letter-spacing: 0.1em;
   text-align: left;
-  color:white;
+  color: white;
 }
