login logout cadastro home
funcionando com a api e cors ok!! vai dar certo!!

--- a/front-end/src/app/cadastro/cadastro.component.css
+++ b/front-end/src/app/cadastro/cadastro.component.css
@@ -1,5 +1,5 @@
 @font-face {
-  font-family:  'Gotham';
+  font-family:  'Poppins';
   src: url('src/app/fontes/Poppins-Regular.woff2') format('woff2'),
     url('src/app/fontes/Poppins-Regular.woff') format('woff');
   font-weight: normal;
