--- a/front-end/src/app/home/home.component.css
+++ b/front-end/src/app/home/home.component.css
@@ -1,56 +1,56 @@
-.user-grid {
+@font-face {
+  font-family:  'Poppins';
+  src: url('src/app/fontes/Poppins-Regular.woff2') format('woff2'),
+    url('src/app/fontes/Poppins-Regular.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+  font-family: 'Gotham';
+  src: url('src/app/fontes/Gotham-black-webfont.woff2') format('woff2'),
+    url('src/app/fontes/Gotham-black-webfont.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+}
+
+
+body{
+  font-family: 'Poppins';
+}
+.campeonato-grid, .user-grid {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-  grid-gap: 20px;
+  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+  gap: 60px; 
+  justify-content: center;
+  text-align: center;
+  color: aliceblue;
+  background-color: rgba(240, 248, 255, 0.582);
+  margin-left: 10px;
+  padding-left: 10px;
 }
 
-.user-card {
-  border: 1px solid #ccc;
-  border-radius: 4px;
-  padding: 20px;
-  display: flex;
-  align-items: center;
+.button-container {
+  text-align: center;
+  margin-top: 20px;
 }
 
-.user-photo {
-  flex: 0 0 40px;
-  margin-right: 10px;
-}
-
-.user-photo img {
-  width: 100px;
-  height: 100px;
-  border-radius: 50%;
-}
-
-.user-details {
-  flex: 1;
-}
-
-.user-id {
-  font-weight: bold;
-  margin-bottom: 5px;
-}
-
-.user-name {
-  font-size: 20px;
-  margin-bottom: 5px;
-}
-
-.user-email {
-  font-style: italic;
-  color: #888;
-}
-
-button {
-  padding: 5px;
-  background-color: #4caf50;
+.cadastrar-btn {
+  padding: 10px 40px;
+  border-radius: 15px;
+  background-color: #3D8D45;
   color: white;
   border: none;
-  border-radius: 4px;
   cursor: pointer;
+  font-size: 16px;
 }
 
-button:hover {
-  background-color: #45a049;
+.home-bg {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: url('src/app/imagens/close-de-um-atleta-jogando-futebol.jpg');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
 }
+
