--- a/front-end/src/app/login/login.component.html
+++ b/front-end/src/app/login/login.component.html
@@ -1,6 +1,8 @@
 <div class="login-bg">
   <div class="login-container">
-
+    <div>
+      
+    </div>
     <div>
       <h2> <span style="color:#FFCE21">Gerencie seus campeonatos</span>
        de uma forma fácil!</h2>
