--- a/front-end/src/app/search/search.component.css
+++ b/front-end/src/app/search/search.component.css
@@ -1,12 +1,33 @@
+@font-face {
+  font-family:  'Poppins';
+  src: url('src/app/fontes/Poppins-Regular.woff2') format('woff2'),
+    url('src/app/fontes/Poppins-Regular.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+  font-family: 'Gotham';
+  src: url('src/app/fontes/Gotham-black-webfont.woff2') format('woff2'),
+    url('src/app/fontes/Gotham-black-webfont.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+}
+
+
+
 input {
   width: 60%;
   padding: 10px;
-  border: 1px solid #eaeaea;
-  border-radius: 4px;
+  border: 5px solid #6CCA75;
+  border-radius: 20px;
   box-sizing: border-box;
   margin-bottom: 10px;
   margin-left: 15%;
   margin-bottom: 5%;
+  font-family: 'Poppins';
+  font-weight: 500;
+  font-size: 16px;
+  background-color: #F4F3F4;
+  color:#979393 ;
+  
 }
 
 input:hover {
@@ -14,18 +35,18 @@ input:hover {
   transition: 1s;
 }
 
-button {
-  background-color: #059fba;
-  color: white;
-  padding: 10px 20px;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
-  margin-left: 3%;
-
-}
-
 button:hover {
   background-color: #05acc9;
   transition: 1s;
+}
+
+button {
+  background-color: #6CCA75;
+  color: white;
+  margin-left: 10px;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 15px;
+  cursor: pointer;
+  font-family: 'Poppins';
 }
