--- a/front-end/src/app/search/search.component.html
+++ b/front-end/src/app/search/search.component.html
@@ -1,6 +1,8 @@
 <div class="search">
 
-    <input type="text" [(ngModel)]="searchTerm" placeholder="Digite o nome ou e-mail">
-    <button (click)="search()">Buscar</button>
+    <input type="text" [(ngModel)]="searchTerm" placeholder="Pesquise o campeonato">
+    <button  (click)="search()"> Buscar
+    </button>
+
   </div>
   
