--- a/front-end/src/app/user-perfil/user-perfil.component.html
+++ b/front-end/src/app/user-perfil/user-perfil.component.html
@@ -1,9 +1,8 @@
-<div class="user-perfil">
-    <div class="user-photo">
-      <img [src]="usuario.photo" alt="Foto do usuário" height="50" width="50">
-    </div>
-    <div class="user-details">
-      <div class="user-name">Nome: {{ usuario.username }}</div>
-    </div>
+<div class="user-perfil" *ngIf="usuario">
+  <!--<div class="user-photo">
+    <img [src]="usuario.photo" alt="Foto do usuário" height="50" width="50">
+  </div>-->
+  <div class="user-details">
+    <div class="user-name">Usuario: {{ usuario.username }}</div>
   </div>
-  
+</div>
