--- a/front-end/src/app/home/home.component.css
+++ b/front-end/src/app/home/home.component.css
@@ -21,10 +21,13 @@ body{
   gap: 60px; 
   justify-content: center;
   text-align: center;
-  color: aliceblue;
+  color: rgb(0, 0, 0);
   background-color: rgba(240, 248, 255, 0.582);
   margin-left: 10px;
   padding-left: 10px;
+  font-family: 'Poppins';
+  letter-spacing: 0.1em;
+  line-height: 20px;
 }
 
 .button-container {
