--- a/front-end/src/app/home/home.component.html
+++ b/front-end/src/app/home/home.component.html
@@ -10,35 +10,17 @@
     <app-search (searchEvent)="performSearch($event)"></app-search>
   </div>
   <br>
-
-  
-  <div class="user-grid">
-    <div class="user-card" *ngFor="let usuario of usuariosFiltrados">
-      <div class="user-photo">
-        <img [src]="usuario.photo" alt="Foto do usuário" height="50" width="50">
-      </div>
-      <div class="user-details">
-        <div class="user-name">Nome: {{ usuario.username }}</div>
-        <div class="user-email">E-mail: {{ usuario.email }}</div>
-        <br>
-      </div>
-    </div>
-    <br>
-  </div>
   
 <div class="campeonato-grid">
-  <div class="campeonato-card" *ngFor="let usuario of usuarios">
-    <div class="campeonato-photo">
-      <img [src]="usuario.photo" alt="Foto do campeonato" height="50" width="50">
-    </div>
+  <div class="campeonato-card" *ngFor="let campeonato of competicoes">
     <div class="campeonato-detalhe">
-      <div class="campeonatos-name">{{ usuario.username }}</div>
+      <div class="campeonatos-name">{{campeonato.nome }}</div>
       
     </div>
   </div>
 </div>
 
 <div class="button-container">
-  <button class="cadastrar-btn">Cadastrar Competição</button>
+  <button class="cadastrar-btn"> <a href="http://localhost:4200/campeonato">Cadastrar Competição</a> </button>
 </div>
 </div>
