--- a/front-end/src/app/home/home.component.html
+++ b/front-end/src/app/home/home.component.html
@@ -1,10 +1,10 @@
 
 <div class="home-bg">
+
+
   <div class="navbar">
     <app-navbar></app-navbar>
-    <app-user-perfil></app-user-perfil>
   </div>
-  <br>
   
   <div>
     <app-search (searchEvent)="performSearch($event)"></app-search>
@@ -21,6 +21,6 @@
 </div>
 
 <div class="button-container">
-  <button class="cadastrar-btn"> <a href="http://localhost:4200/campeonato">Cadastrar Competição</a> </button>
+  <button class="cadastrar-btn"> <a href="http://localhost:4200/campeonato">Cadastrar Campeonato</a> </button>
 </div>
 </div>
