--- a/front-end/src/app/login/login.component.html
+++ b/front-end/src/app/login/login.component.html
@@ -1,4 +1,9 @@
 <div class="login-bg">
+  
+  <div class="logo">
+    <img width="270px" src="/assets/img/Winner-league-logoo.png" alt="ata">
+  </div>
+
   <div class="login-container">
     <div>
       
