--- a/front-end/src/app/navbar/navbar.component.html
+++ b/front-end/src/app/navbar/navbar.component.html
@@ -1,9 +1,11 @@
-<nav class="navbar">
-    <ul class="nav-list">
-      <li class="nav-item"><a href="http://localhost:4200/profile">Perfil</a></li>
-      <li class="nav-item"><a href="http://localhost:4200/home">Meus Campeonatos</a></li>
-      <li class="nav-item"><a href="http://localhost:4200/Sobre-nos">Sobre nós</a></li>
-      <li class="nav-item"><button (click)="limparLocalStorage()">Sair</button></li>
-    </ul>
-  </nav>
+  <nav class="navbar"> 
+     <a href="/home"><img width="270px" src="/assets/img/Winner-league-logoo.png" alt="ata"></a>
+      <ul class="nav-list">
+        <li class="nav-item"><span><app-user-perfil></app-user-perfil></span></li>
+        <li class="nav-item"><a href="http://localhost:4200/profile">Perfil</a></li>
+        <li class="nav-item"><a href="http://localhost:4200/home">Meus Campeonatos</a></li>
+        <li class="nav-item"><a href="http://localhost:4200/Sobre-nos">Sobre nós</a></li>
+        <li class="nav-item"><button (click)="limparLocalStorage()">Sair</button></li>
+      </ul>
+    </nav>
 
