--- a/front-end/src/app/cadastro-campeonato/cadastro-campeonato.component.css
+++ b/front-end/src/app/cadastro-campeonato/cadastro-campeonato.component.css
@@ -11,9 +11,14 @@
     font-style: normal;
   }
   
+  body {
+    font-family: 'Poppins';
+    background-color: #F7F5FA;
+  }
+
   .cadastro-campeonato-container {
     width: 80%;
-    max-width: 525px; 
+    max-width: 500px; 
     padding: 20px; 
     border: none;
     border-radius: 8px;
@@ -25,18 +30,20 @@
   }
   
   .cadastro-campeonato-container {
-      width: 80%; 
+      width: 50%; 
       max-width: 525px; 
       padding: 20px; 
       border: none;
-      border-radius: 8px;
+      border-radius: 20px;
       font-family: 'Popins';
       font-weight: 500;
       font-size: 15px;
       line-height: 30px;
       z-index: 1;
-      padding-left: 500px;
+      margin-left: 400px;
       color: #545454;
+      background-color: #ffff;
+
     
   }
 
@@ -49,7 +56,7 @@
     text-align: left;
     color: #215626;
     text-transform: uppercase;
-  
+    margin-bottom: 5px;
   
   }
   
@@ -66,7 +73,7 @@
     border: 1px solid #eaeaea;
     border-radius: 4px;
     box-sizing: border-box;
-    margin-bottom: 10px;
+    margin-bottom: 5px;
     background-color: #5454541e;
   }
   
@@ -74,14 +81,14 @@
     background-color: #3D8D45;
     color: rgb(255, 255, 255);
     padding: 5px 87px;
-    border: 1px solid #3f3f3fde;
-    border-radius: 4px;
+    border: 1px solid #3f3f3f00;
+    border-radius: 15px;
     cursor: pointer;
     font-family: 'Gotham';
     font-weight: 500;
     font-size: 16px;
     line-height: 24px;
-    margin-left: 104px;
+    margin-left: 80px;
     letter-spacing: 0em;
     text-align: left;
   }
@@ -89,4 +96,15 @@
   .form-container .error-message {
     color: red;
     margin-bottom: 10px;
+  }
+
+  .cadastro-campeonato-bg{
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+  }
+
+  .card-1{    padding: 20px;
   }
