--- a/front-end/src/app/home/home.component.css
+++ b/front-end/src/app/home/home.component.css
@@ -22,7 +22,6 @@ body{
   justify-content: center;
   text-align: center;
   color: rgb(0, 0, 0);
-  background-color: rgba(240, 248, 255, 0.582);
   margin-left: 10px;
   padding-left: 10px;
   font-family: 'Poppins';
@@ -36,6 +35,7 @@ body{
 }
 
 .cadastrar-btn {
+  margin-top: 50px;
   padding: 10px 40px;
   border-radius: 15px;
   background-color: #3D8D45;
@@ -44,16 +44,26 @@ body{
   cursor: pointer;
   font-size: 16px;
 }
-
 .home-bg {
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  background: url('src/app/imagens/close-de-um-atleta-jogando-futebol.jpg');
+  background: url('src\assets\img\close-de-um-atleta-jogando-futebol.jpg') ;
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
+  overflow: hidden;
+}
+.campeonato-card{
+  background-color: #D3E8D8;
+  border-radius: 10px;
+  padding: 50px 20px;
 }
 
+a{
+   text-decoration: none;
+   color: #e4f3e7;
+   font-weight: bold;
+}
