--- a/front-end/src/app/login/login.component.css
+++ b/front-end/src/app/login/login.component.css
@@ -22,6 +22,7 @@ body {
   font-size: 20px;
   line-height: 30px;
   z-index: 1;
+  padding-top: 40px;
 }
 
 .login-bg {
@@ -30,7 +31,7 @@ body {
   left: 0;
   width: 100%;
   height: 100%;
-  background: linear-gradient(to right, #4d7b52 40%, #4d7b5205 80%, transparent 40%), url('src/app/imagens/jogadores-de-futebol-em-acao-no-estadio-profissional.jpg');
+  background: linear-gradient(to right, #4d7b52 40%, #4d7b5205 80%, transparent 40%), url('src\assets\img\jogadores-de-futebol-em-acao-no-estadio-profissional.jpg');
   background-size: cover;
   background-position: center;
 }
@@ -96,7 +97,7 @@ label[for="password"] {
 
 h2 {
   font-family: 'Poppins';
-  font-size: 36px;
+  font-size: 30px;
   font-weight: 500;
   line-height: 54px;
   letter-spacing: 0em;
@@ -111,4 +112,11 @@ h3 {
   letter-spacing: 0.1em;
   text-align: left;
   color: white;
+}
+
+.logo img {
+  display: inline-block;
+  vertical-align: middle; 
+  margin-left: 100px;
+  margin-top: 60px;
 }
