--- a/front-end/src/app/profile/profile.component.html
+++ b/front-end/src/app/profile/profile.component.html
@@ -1,10 +1,15 @@
-<div class="profile">
-    <h2>Meu Perfil</h2>
-    <div class="profile-buttons">
-      <button (click)="navigateToMyChampionships()">Meus Campeonatos</button>
-      <button (click)="navigateToEditProfile()">Editar Perfil</button>
-      <button (click)="deleteAccount()">Excluir Conta</button>
-      <button (click)="logout()">Sair</button>
-    </div>
+<div class="profile-bg">
+ </div>
+<div class="profile-card">
+  <div class="profile-buttons">
+    <img width="90px" src="/assets/img/user (1).png" alt="img perfil">
+    <app-user-perfil></app-user-perfil>
+    <button><a href="http://localhost:4200/editar-perfil">Editar perfil</a></button>
+    <button><a href="http://localhost:4200/home">Meus Campeonatos</a></button>
+    <button><a href="http://localhost:4200/excluir-conta">Excluir Conta</a></button>
+    <button (click)="limparLocalStorage()">Sair</button>
   </div>
+</div>
   
+
+
